Added user show page and UserRepresenter
