# swagger/v1/swagger.yaml
@@ -411,6 +411,51 @@ paths:
               required:
               - password
               - password_confirmation
+  "/api/v1/users/{id}":
+    get:
+      summary: Returns specified user
+      tags:
+      - User
+      security:
+      - bearer_auth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: when user exists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    default: 1
+                  username:
+                    type: string
+                    default: Student99
+                  created_at:
+                    type: date
+                    default: '2022-09-20T10:45:38.966Z'
+                  number_of_plans:
+                    type: integer
+                    default: 1
+                required:
+                - id
+                - username
+                - created_at
+                - number_of_plans
+                example:
+                  id: 1
+                  username: Student99
+                  created_at: '2022-09-20T10:45:38.966Z'
+                  number_of_plans: 1
+        '401':
+          description: user is unauthorized
 servers:
 - url: http://{developmentHost}
   variables:
